# UWBLocalization

./: .gitignore  .gitmodules  Makefile  README.md  install.sh  main.cc
include/: UwbApi.h
ranging_api/libUWBranging/: Makefile  cubes_common.d  cubes_wrapper.d  network_handler.d  ranging_api.d
ranging_api/ranging_service/: Makefile  ranging_service
ranging_api/ranging_service/wrapper/: cubes_common.d  cubes_common.h  cubes_wrapper.c  cubes_wrapper.d
report/: main.tex  paper.tex  ref.bib
report/.devcontainer/: devcontainer.json  docker-compose.yml
report/cvpr/: cvpr.sty  notation.tex
report/secs/: 1-logs.tex  2-notes.tex  3-experiments.tex
report/sections/: conclusions.tex  experimental_setup.tex  introduction.tex  observer_design.tex  problem_statement.tex  results.tex
src/Matlab/: loadPointCloud.m  plotBag.asv  plotBag.m  readBag.m
src/Matlab/Simulink/catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/jackal_op/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/Matlab/Simulink/catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/jackal_op/include/jackal_op/: visibility_control.h
src/Matlab/Simulink/catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/jackal_op/m/+ros/+internal/+ros/+custommessages/+jackal_op/: gradientDescent.m
src/Matlab/Simulink/catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/jackal_op/m/+ros/+msggen/+jackal_op/: GradientDescent.m
src/Matlab/Simulink/catkin_ws/src/matlab_msg_gen_ros1/glnxa64/src/jackal_op/src/: jackal_op_GradientDescent_message.cpp  jackal_op_TransformArray_message.cpp
src/Simulink/: GetStartedWithROSInSimulinkExample.mlx  ReadCustom.slx  ReadCustom.slx.autosave  ReadCustom.tgz  plot_test.m  wrap.m
src/Simulink/ReadCustom_ert_rtw/: MW_target_hardware_resources.h  ReadCustom.h  ReadCustom_dt.h  ReadCustom_private.h  ReadCustom_targ_data_map.m  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  codertarget_assembly_flags.mk  compileInfo.mat  ert_main.cpp  main.cpp  multiword_types.h  rosModelInfo.mat  rtw_proj.tmw  rtwtypeschksum.mat  slros_initialize.cpp
src/Simulink/catkin_ws/src/readcustom/: CMakeLists.txt  package.xml  packageInfo.mat
src/Simulink/catkin_ws/src/readcustom/include/readcustom/: ReadCustom.h  ReadCustom_dt.h  ReadCustom_private.h  ReadCustom_types.h  multiword_types.h  rosnodeinterface.h  rtiostream_utils.h  rtmodel.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
src/Simulink/catkin_ws/src/readcustom/src/: ReadCustom.cpp  ReadCustom_data.cpp  main.cpp  rosnodeinterface.cpp  slros_busmsg_conversion.cpp  slros_initialize.cpp
src/Simulink/fig/: position.fig  tags.fig  velocity.fig
src/Vicon/ViconMatlab/: GetCentre.m  GetViconData.m  MarkerPosFunc.m  NatyStream.m  ViconDataStreamSDK_MATLABTest.m  ViconDataStreamSDK_MATLABTest_old.m  ViconMatlabStream.m
src/catkin_ws/: frames.gv
src/catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
src/catkin_ws/install/share/UWB_driver/: package.xml
src/catkin_ws/install/share/UWB_driver/cmake/: UWB_driver-msg-extras.cmake  UWB_driver-msg-paths.cmake  UWB_driverConfig.cmake
src/catkin_ws/src/UWB_driver/: CMakeLists.txt
src/catkin_ws/src/UWB_driver/config/: UWB_driver_read.yaml  UWB_driver_read_T0.yaml  UWB_driver_read_T1.yaml  UWB_driver_read_T2.yaml
src/catkin_ws/src/UWB_driver/src/python/: UWB_read.py  UWB_setup.py
src/catkin_ws/src/jackal_op/: CMakeLists.txt  package.xml
src/catkin_ws/src/jackal_op/config/: jackal_op_disthandle.yaml  jackal_op_disthandle_T0.yaml  jackal_op_disthandle_T1.yaml  jackal_op_disthandle_T2.yaml  jackal_op_disthandle_T7.yaml  jackal_op_disthandle_centralized.yaml  jackal_op_disttrue.yaml  jackal_op_hybobs.yaml  jackal_op_hybobs_T0.yaml  jackal_op_hybobs_T1.yaml  jackal_op_hybobs_T2.yaml  jackal_op_hybobs_centralized.yaml
src/catkin_ws/src/jackal_op/launch/: jack_disthandle.launch  jack_disttrue.launch  jack_hybobs.launch
src/catkin_ws/src/jackal_op/msg/: GradientDescent.msg  MeshUWB.msg
src/catkin_ws/src/jackal_op/src/alglib-cpp/: manual.cpp.html
src/catkin_ws/src/jackal_op/src/alglib-cpp/src/: ap.cpp  ap.h  dataanalysis.h  diffequations.cpp  fasttransforms.h  kernels_avx2.cpp  kernels_avx2.h  kernels_fma.cpp  kernels_fma.h  kernels_sse2.h  linalg.cpp  linalg.h  optimization.cpp  solvers.cpp  statistics.cpp
src/catkin_ws/src/jackal_op/src/cpp/: jack_disthandle.cpp  jack_disthandle_centralized.cpp  jack_disthandle_dummy.cpp  jack_disttrue.cpp  jack_hybobs.cpp  jack_hybobs_centralized.cpp  jack_remap.cpp  jack_velpub.cpp  jack_vicon.cpp  libful.cpp  libful.h  teleop_pub.cpp
src/catkin_ws/src/jackal_op/src/libful/: GeneralAPI.cpp  GeneralAPI.hpp  MelodicAPI.cpp  MelodicAPI.hpp  libful.cpp  libful.h  uwb_ceres.cpp  uwb_ceres.hpp
src/catkin_ws/src/vicon/: CMakeLists.txt  package.xml
src/catkin_ws/src/vicon/src/cpp/: jack_vicon.cpp
src/docker/: Dockerfile.matlab.x86.2023.base  Dockerfile.melodic.x86.base  Dockerfile.melodic.x86.dev  Dockerfile.noetic.x86.base  Dockerfile.noetic.x86.dev  Dockerfile.x86.base  Dockerfile.x86.dev  docker-compose.yml  sources_bionic.list  sources_focal.list
src/docker/config/: .aliases.sh  .bashrc  .gcs_aliases.sh  .ros2_cmds.sh  .stanis_aliases.sh  .zshrc  .zshrc_nx  NETGEAR_R7000.cfg  defaults-dev.yaml  defaults-nx.yaml  defaults-up.yaml  px4_rcS_remote-sim  rob_tilix.json  rviz_config.rviz  stanis-base-nx.service  stanis-base.service  tenny_tilix.json
src/setup/: README_CEAR.md  known_issues.txt  setupJackal-melodic.sh  setupJackal-noetic.sh  setupNvidia-local.sh  setupROS-melodic.sh  setupROS-noetic.sh
src/setup/scripts/: gcs-jackal.sh  local-jackal.sh  master-jackal.sh  pysetup.sh  remote-jackal.sh  setupNvidia-local.sh  setupROS-melodic.sh
src/src/readcustom/: CMakeLists.txt  package.xml  packageInfo.mat
src/stuff/: todo.txt
src/stuff/armadillo-12.2.0/: ArmadilloConfig.cmake  ArmadilloConfigVersion.cmake  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  NOTICE.txt  README.md  cmake_install.cmake  docs.html  install_manifest.txt  libarmadillo.so.12  (+1 more)
uwb/: execute.sh
uwb/include/: uwb.h
(+524 files in other folders)
